programs/examples/type_errors/add_wrong_input.hssa
// EXPECT welltyped=false

rel type_error:
(),0 := begin<-
x := add 0 =: 0, 0
-> end =: x, 0